<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="dialog_color_trackball">Choose a color</string>
    <string name="dialog_blink_trackball">Choose a blink rate</string>
    <string name="color_trackball_flash_title">Flash color</string>
    <string name="color_trackball_flash_summary">Color to flash</string>
    <string name="color_trackball_custom_title">Custom color</string>
    <string name="color_trackball_custom_summary">Custom color to flash</string>
    <string name="color_trackball_blink_title">Blink rate</string>
    <string name="color_trackball_blink_summary">Blink rate</string>
    <string name="color_trackball_test_title">Flash test</string>
    <string name="color_trackball_test_summary">Test the flash</string>
    <string name="pref_trackball_screen_title">Always pulse</string>
    <string name="pref_trackball_screen_summary">LED will pulse while screen is on</string>
    <string name="pref_trackball_blend_title">Blend notifications</string>
    <string name="pref_trackball_blend_summary">Blend notification colors. Overrides succession</string>
    <string name="pref_trackball_sucess_title">Succession</string>
    <string name="pref_trackball_sucess_summary">Pulse notifications in succession</string>
    <string name="pref_trackball_random_title">Random colors</string>
    <string name="pref_trackball_random_summary">Pulses the LED in random colors for all notifications</string>
    <string name="pref_trackball_order_title">Pulse in order</string>
    <string name="pref_trackball_order_summary">Pulses the LED color in order</string>
    <string name="pref_trackball_reset_title">Reset</string>
    <string name="pref_trackball_reset_summary">Reset all colors and apps</string>
    <string name="trackball_category_list_title">Category</string>
    <string name="trackball_category_list_summary">Choose a category</string>
    <string name="trackball_color_notice_title">NOTE:</string>
    <string name="trackball_color_notice_summary">Not all colors will display on all devices</string>
    <string name="trackball_app_save_title">Save</string>
    <string name="trackball_app_save_summary">Save settings for this application</string>
    <string name="trackball_app_reset_title">Reset</string>
    <string name="trackball_app_reset_summary">Remove custom settings for this application</string>
    <string name="trackball_force_mode_title">LED mode</string>
    <string name="trackball_force_mode_dialog">Please select a mode</string>
    <string name="trackball_force_mode_summary">Configure how the LED should behave</string>
    <string name="pref_lockscreen_always_battery_title">Always display battery status</string>
    <string name="pref_lockscreen_always_battery_summary">Display battery status on the lockscreen at all times</string>
    <string name="pref_lockscreen_widgets_layout_title">Widget layout</string>
    <string name="pref_lockscreen_widgets_layout_summary">Toggle clock, date, carrier, status layout</string>
    <string name="pref_lockscreen_music_controls_title">Lockscreen music controls</string>
    <string name="pref_lockscreen_music_controls_summary">Display music controls on the lockscreen</string>
    <string name="pref_lockscreen_now_playing_title">Display song name</string>
    <string name="pref_lockscreen_now_playing_summary">Display the name and artist of the song currently playing</string>
    <string name="pref_lockscreen_album_art_title">Display album art</string>
    <string name="pref_lockscreen_album_art_summary">Display the album art of the current song. Only works with stock music player in portrait mode</string>
    <string name="pref_lockscreen_music_headset_title">Display music controls with headset</string>
    <string name="pref_lockscreen_music_headset_summary">Display music controls when a wired headset and/or Bluetooth A2DP headset is connected</string>
    <string name="pref_lockscreen_always_music_controls_title">Always display music controls</string>
    <string name="pref_lockscreen_always_music_controls_summary">Display music controls regardless of whether or not music is playing</string>
    <string name="lockscreen_music_title">Music Controls</string>
    <string name="lockscreen_widgets_note_title">Note</string>
    <string name="lockscreen_widgets_note_summary">Choosing minimalistic lense style hides all widgets except music control. Yet below options are not unset to allow easy switching to other styles</string>
    <string name="lockscreen_calendar_title">Lockscreen Calendar</string>
    <string name="pref_lockscreen_calendar_alarm_title">Display next calendar event</string>
    <string name="pref_lockscreen_calendar_alarm_summary">Display the time and title of the next calendar event</string>
    <string name="pref_lockscreen_calendars_title">Event calendars</string>
    <string name="pref_lockscreen_calendars_summary">Find events from these calendars</string>
    <string name="pref_lockscreen_calendar_reminders_only_title">Reminders only</string>
    <string name="pref_lockscreen_calendar_reminders_only_summary">Find only events that have reminders</string>
    <string name="pref_lockscreen_calendar_lookahead_title">Calendar event lookahead</string>
    <string name="pref_lockscreen_calendar_lookahead_summary">How far in the future should calendar events be found</string>
    <string name="pref_lockscreen_calendar_show_location_title">Display event location</string>
    <string name="pref_lockscreen_calendar_show_location_summary">Show event location under title</string>
    <string name="pref_lockscreen_calendar_show_description_title">Display event description</string>
    <string name="pref_lockscreen_calendar_show_description_summary">Show event description under title</string>
    <string name="pref_compcache_title">Compcache RAM Usage</string>
    <string name="pref_compcache_summary">Compress memory for increased virtual capacity (requires reboot)</string>
    <string name="pref_jit_mode_title">Use JIT</string>
    <string name="pref_jit_mode_summary">Use the Dalvik just-in-time compiler (requires reboot)</string>
    <string name="pref_use_dithering_title">Enable surface dithering</string>
    <string name="pref_use_dithering_summary">Dithering surfaces improves image quality at the cost of performance (requires reboot)</string>
    <string name="pref_use_16bpp_alpha_title">Use 16bit transparency</string>
    <string name="pref_use_16bpp_alpha_summary">Using 16bit transparency can improve scrolling performance, but may cause visual artifacts (requires reboot)</string>
    <string name="pref_scrollingcache_title">Scrolling cache</string>
    <string name="pref_scrollingcache_summary">Scrolling cache may improve scrolling performance at the cost of memory</string>
    <string name="pref_purgeable_assets_title">Allow purging of assets</string>
    <string name="pref_purgeable_assets_summary">System can free more RAM when needed if asset bitmap memory can be reclaimed (requires reboot)</string>
    <string name="pref_heapsize_title">VM heap size</string>
    <string name="pref_heapsize_summary">Maximum amount of memory per VM heap (requires reboot)</string>
    <string name="pref_disable_bootanimation_title">Disable boot animation</string>
    <string name="pref_disable_bootanimation_summary">Don\'t show the boot animation for faster boot</string>
    <string name="pref_lock_home_title">Lock home in memory</string>
    <string name="pref_lock_home_summary">Attempt to keep the current home app in memory at all times</string>
    <string name="pref_lock_mms_title">Lock messaging app in memory</string>
    <string name="pref_lock_mms_summary">Avoid lost messages on low memory situations</string>
    <string name="pref_switch_storage_title">Use internal storage</string>
    <string name="pref_switch_storage_summary_on">Using expanded internal storage for apps and media (requires reboot)</string>
    <string name="pref_switch_storage_summary_off">Using removable card for apps and media (requires reboot)</string>
    <string name="pref_move_all_apps_title">Allow application moving</string>
    <string name="pref_move_all_apps_summary">Allow moving of any application to external storage</string>
    <string name="pref_install_location_title">Install location</string>
    <string name="pref_install_location_summary">Select where new applications should be installed</string>
    <string name="general_title">General</string>
    <string name="quiet_hours_note_title">Note</string>
    <string name="quiet_hours_note_summary">Incoming calls will behave like usual during quiet hours</string>
    <string name="quiet_hours_enabled">Enable quiet hours</string>
    <string name="quiet_hours_enabled_on">Quiet hours will be enforced</string>
    <string name="quiet_hours_enabled_off">Notifications will behave like normal</string>
    <string name="quiet_hours_start">Start of quiet hours</string>
    <string name="quiet_hours_start_summary">When to start enforcing quiet hours</string>
    <string name="quiet_hours_end">End of quiet hours</string>
    <string name="quiet_hours_end_summary">When to stop enforcing quiet hours</string>
    <string name="quiet_hours_mute">Mute notifications</string>
    <string name="quiet_hours_mute_on">No sounds will be played</string>
    <string name="quiet_hours_mute_off">Sounds will play like normal</string>
    <string name="quiet_hours_still">Disable vibrations</string>
    <string name="quiet_hours_still_on">Device will not vibrate</string>
    <string name="quiet_hours_still_off">Device will vibrate normally</string>
    <string name="quiet_hours_dim">Dim LED</string>
    <string name="quiet_hours_dim_on">LED will dim if possible</string>
    <string name="quiet_hours_dim_off">LED will be full brightness</string>
    <string name="category_phone_goggles_period">Period</string>
    <string name="category_phone_goggles_confirmation">Confirmation</string>
    <string name="category_phone_goggles_filter">Filters</string>
    <string name="title_phone_goggles">Phone Goggles</string>
    <string name="title_phone_goggles_app_enabled">Enable Phone Goggles</string>
    <string name="title_phone_goggles_use_custom">Use custom settings</string>
    <string name="title_phone_goggles_filter">Filtered numbers</string>
    <string name="title_phone_goggles_start">Start of phone goggles mode</string>
    <string name="title_phone_goggles_end">End of phone goggles mode</string>
    <string name="title_phone_goggles_confirmation_enabled">Request for confirmation</string>
    <string name="title_phone_goggles_maths_level">Math level</string>
    <string name="summary_phone_goggles">Filter outgoing communications</string>
    <string name="summary_phone_goggles_filter">Select the type of phone numbers you want to filter</string>
    <string name="summary_phone_goggles_start">When to start filtering outgoing calls</string>
    <string name="summary_phone_goggles_end">When to end filtering outgoing calls</string>
    <string name="summary_phone_goggles_confirmation_enabled">Select which way the confirmation should be requested before filtering the communication</string>
    <string name="summary_phone_goggles_maths_level">Level of the math problems asked before authorizing a communication</string>
    <string name="summary_on_phone_goggles_use_custom">Use custom settings</string>
    <string name="summary_on_phone_goggles_app_enabled">Phone Goggles is enabled for this application</string>
    <string name="summary_off_phone_goggles_use_custom">Use default settings</string>
    <string name="summary_off_phone_goggles_app_enabled">Phone Goggles is disabled for this application</string>
    <string name="cpu_title">CPU settings</string>
    <string name="cpu_summary">Governor and clock settings</string>
    <string name="perm_enable_management">Permission management</string>
    <string name="perm_enable_management_summary">Enable application permissions management</string>
</resources>