<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- Some spacing -->
	<PreferenceCategory />

	<!-- Note -->
	<Preference android:title="@string/quiet_hours_note_title"
		android:summary="@string/quiet_hours_note_summary" android:selectable="false" />

	<PreferenceCategory android:title="@string/general_title">

		<CheckBoxPreference android:key="quiet_hours_enabled"
			android:title="@string/quiet_hours_enabled" android:summaryOn="@string/quiet_hours_enabled_on"
			android:summaryOff="@string/quiet_hours_enabled_off"
			android:defaultValue="false" />

		<Preference android:key="quiet_hours_start" android:title="@string/quiet_hours_start"
			android:summary="@string/quiet_hours_start_summary"
			android:dependency="quiet_hours_enabled" />

		<Preference android:key="quiet_hours_end" android:title="@string/quiet_hours_end"
			android:summary="@string/quiet_hours_end_summary" android:dependency="quiet_hours_enabled" />

		<CheckBoxPreference android:key="quiet_hours_mute"
			android:title="@string/quiet_hours_mute" android:summaryOn="@string/quiet_hours_mute_on"
			android:summaryOff="@string/quiet_hours_mute_off" android:dependency="quiet_hours_enabled" />

		<CheckBoxPreference android:key="quiet_hours_still"
			android:title="@string/quiet_hours_still" android:summaryOn="@string/quiet_hours_still_on"
			android:summaryOff="@string/quiet_hours_still_off"
			android:dependency="quiet_hours_enabled" />

		<CheckBoxPreference android:key="quiet_hours_dim"
			android:title="@string/quiet_hours_dim" android:summaryOn="@string/quiet_hours_dim_on"
			android:summaryOff="@string/quiet_hours_dim_off" android:dependency="quiet_hours_enabled" />

	</PreferenceCategory>
</PreferenceScreen>
