<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General settings -->
    <PreferenceCategory android:key="general_category"
        android:title="@string/general_title">

        <PreferenceScreen android:key="cpu_settings" android:title="@string/cpu_title" android:summary="@string/cpu_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.cyanogenmod.cmparts"
                android:targetClass="com.cyanogenmod.cmparts.activities.CPUActivity" />
        </PreferenceScreen>

        <ListPreference android:key="pref_compcache_size"
            android:dialogTitle="@string/pref_compcache_title"
            android:title="@string/pref_compcache_title"
            android:summary="@string/pref_compcache_summary"
            android:entries="@array/pref_compcache_size_entries"
            android:entryValues="@array/pref_compcache_size_values" />

        <CheckBoxPreference android:key="pref_jit_mode"
            android:title="@string/pref_jit_mode_title" android:summary="@string/pref_jit_mode_summary" />

        <CheckBoxPreference android:key="pref_use_dithering"
            android:title="@string/pref_use_dithering_title"
            android:summary="@string/pref_use_dithering_summary" />

        <CheckBoxPreference android:key="pref_use_16bpp_alpha"
            android:title="@string/pref_use_16bpp_alpha_title"
            android:summary="@string/pref_use_16bpp_alpha_summary" />

        <ListPreference android:key="pref_scrollingcache"
            android:dialogTitle="@string/pref_scrollingcache_title"
            android:title="@string/pref_scrollingcache_title" android:summary="@string/pref_scrollingcache_summary"
            android:entries="@array/entries_scrollingcache"
            android:entryValues="@array/values_scrollingcache" />

        <CheckBoxPreference android:key="pref_purgeable_assets"
            android:title="@string/pref_purgeable_assets_title"
            android:summary="@string/pref_purgeable_assets_summary" />

        <CheckBoxPreference android:key="pref_disable_bootanimation"
            android:title="@string/pref_disable_bootanimation_title"
            android:summary="@string/pref_disable_bootanimation_summary" />

        <CheckBoxPreference android:key="pref_lock_home"
            android:title="@string/pref_lock_home_title"
            android:summary="@string/pref_lock_home_summary" />

        <CheckBoxPreference android:key="pref_lock_mms"
            android:title="@string/pref_lock_mms_title" android:summary="@string/pref_lock_mms_summary" />

        <ListPreference android:key="pref_heapsize"
            android:dialogTitle="@string/pref_heapsize_title"
            android:title="@string/pref_heapsize_title" android:summary="@string/pref_heapsize_summary"
            android:entries="@array/entries_heapsize"
            android:entryValues="@array/values_heapsize" />

    </PreferenceCategory>

</PreferenceScreen>
